edit router rolemenu and fix Spelling mistakes login
