# internal/routers/rolesmenu/rolesmenu_rouer.go
@@ -12,6 +12,6 @@ func (ar *RolesMenuRouter) InitRolesMenuRouter(Router *gin.RouterGroup) {
 	rolesMenuRouterPrivate := Router.Group("/rolesmenu")
 	//roleRouterPrivate.Use(middlewares.AuthenMiddleware())
 	{
-		rolesMenuRouterPrivate.POST("/create_roles_menu", rolesmenu.RolesMenu.CreateRolesMenu)
+		rolesMenuRouterPrivate.POST("/create_roles_menu", rolesmenu.RolesMenus.CreateRolesMenu)
 	}
 }
